# VoteWise2

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_TO_RENDER.md  FAVICON_UPDATE.md  LICENSE  README.md  REPORT_SERVICE_DOCS.md  RESULTS_PAGE_REVAMP.md  WINNER_HIGHLIGHTING_UPDATE.md  create_test_data.py  demo_logging.py  gunicorn.conf.py  load_philippine_election.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_dev.sh  setup_env.sh  setup_results_test.py
.agent/workflows/: generate_report.md  setup_email.md
apps/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/administration/: admin.py  forms.py  models.py  tests.py  tests_login.py  urls.py  views.py
apps/biometrics/: models.py  urls.py  views.py
apps/chatbot/: admin.py  models.py  services.py  urls.py  views.py
apps/core/: admin.py  models.py  urls.py  views.py
apps/elections/: admin.py  models.py  tests.py  tests_anonymity.py  tests_load.py  urls.py  views.py
apps/reports/: decorators.py  tests.py  urls.py  utils.py  views.py
deploy/: nginx.conf  votewise.service
docs/: FINAL_TESTING_SUMMARY.md  LOGGER_QUICK_REFERENCE.md  LOGGING_COVERAGE.md  LOGGING_IMPLEMENTATION.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READINESS_REPORT.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REQUIREMENTS_UPDATE.md  SEARCH_FILTER_FIX.md  SETTINGS_README.md  User_Manual.md
fixtures/: README.md
logs/: .gitignore
project_config/: settings.py  urls.py
scripts/: backup_db.sh  debug_admin_login.py  deploy.sh  pre_deploy_check.sh
templates/: base.html
(+188 files in other folders)
